网络测速修正 + 速率切换功能

--- a/public/tools/life/speed_test.html
+++ b/public/tools/life/speed_test.html
@@ -254,9 +254,66 @@
       text-align: center;
     }
 
+    .controls-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: var(--spacing-lg);
+      margin-bottom: var(--spacing-lg);
+      flex-wrap: wrap;
+    }
+
+    .unit-selector {
+      display: flex;
+      align-items: center;
+      gap: var(--spacing-sm);
+    }
+
+    .unit-selector label {
+      font-size: var(--font-size-base);
+      color: var(--color-text);
+      font-weight: var(--font-weight-semibold);
+      white-space: nowrap;
+    }
+
+    .unit-select {
+      padding: var(--spacing-sm) var(--spacing-md);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-sm);
+      font-size: var(--font-size-base);
+      background: var(--color-surface);
+      color: var(--color-text);
+      cursor: pointer;
+      transition: all 0.3s;
+      min-width: 180px;
+    }
+
+    .unit-select:focus {
+      outline: none;
+      border-color: var(--color-primary);
+      box-shadow: 0 0 0 4px rgba(var(--color-primary-rgb), 0.2);
+    }
+
+    .unit-select:hover {
+      border-color: var(--color-primary);
+    }
+
     @media (max-width: 768px) {
       .test-results {
         grid-template-columns: 1fr;
+      }
+
+      .controls-row {
+        flex-direction: column;
+        align-items: stretch;
+      }
+
+      .unit-selector {
+        width: 100%;
+      }
+
+      .unit-select {
+        width: 100%;
       }
 
       .test-button {
@@ -283,10 +340,23 @@
           正在选择最佳测试服务器...
         </div>
 
-        <button class="test-button" id="startTestBtn">
-          <span>🚀</span>
-          <span>开始测速</span>
-        </button>
+        <div class="controls-row">
+          <div class="unit-selector">
+            <label for="unitSelect">速度单位：</label>
+            <select id="unitSelect" class="unit-select">
+              <option value="Mbps">Mbps (兆比特/秒)</option>
+              <option value="MB/s">MB/s (兆字节/秒)</option>
+              <option value="Kbps">Kbps (千比特/秒)</option>
+              <option value="KB/s">KB/s (千字节/秒)</option>
+              <option value="Gbps">Gbps (千兆比特/秒)</option>
+            </select>
+          </div>
+
+          <button class="test-button" id="startTestBtn">
+            <span>🚀</span>
+            <span>开始测速</span>
+          </button>
+        </div>
 
         <div class="test-results" id="testResults">
           <div class="result-card" id="pingCard">
@@ -304,7 +374,7 @@
             <div class="result-icon">⬇️</div>
             <div class="result-label">下载速度</div>
             <div class="result-value" id="downloadValue">--</div>
-            <div class="result-unit">Mbps</div>
+            <div class="result-unit" id="downloadUnit">Mbps</div>
             <div class="result-status" id="downloadStatus">等待测试</div>
             <div class="progress-bar" id="downloadProgress">
               <div class="progress-fill" id="downloadProgressFill"></div>
@@ -315,7 +385,7 @@
             <div class="result-icon">⬆️</div>
             <div class="result-label">上传速度</div>
             <div class="result-value" id="uploadValue">--</div>
-            <div class="result-unit">Mbps</div>
+            <div class="result-unit" id="uploadUnit">Mbps</div>
             <div class="result-status" id="uploadStatus">等待测试</div>
             <div class="progress-bar" id="uploadProgress">
               <div class="progress-fill" id="uploadProgressFill"></div>
@@ -335,11 +405,11 @@
             </div>
             <div class="summary-item">
               <div class="summary-label">下载速度</div>
-              <div class="summary-value" id="summaryDownload">-- Mbps</div>
+              <div class="summary-value" id="summaryDownload">-- <span id="summaryDownloadUnit">Mbps</span></div>
             </div>
             <div class="summary-item">
               <div class="summary-label">上传速度</div>
-              <div class="summary-value" id="summaryUpload">-- Mbps</div>
+              <div class="summary-value" id="summaryUpload">-- <span id="summaryUploadUnit">Mbps</span></div>
             </div>
             <div class="summary-item">
               <div class="summary-label">测试时间</div>
@@ -352,39 +422,209 @@
   </div>
 
   <script>
-    // 测试服务器列表（使用公开的测试服务器）
+    // 测速服务器列表
+    // 注意：下载和上传测试统一使用 Cloudflare 的测速服务（全球节点，自动选择最近节点）
+    // pingUrl 用于测试延迟并选择最优服务器
     const testServers = [
+      // 中国大陆服务器（优先，用于延迟测试）
       {
-        name: 'Cloudflare',
+        name: 'Cloudflare (中国大陆节点)',
+        region: 'CN',
+        pingUrl: 'https://www.cloudflare.com',
+        downloadUrl: 'https://speed.cloudflare.com/__down?bytes=',
+        uploadUrl: 'https://speed.cloudflare.com/__up',
+        priority: 10
+      },
+      {
+        name: '阿里云 (北京)',
+        region: 'CN',
+        pingUrl: 'https://oss-cn-beijing.aliyuncs.com',
+        downloadUrl: 'https://speed.cloudflare.com/__down?bytes=',
+        uploadUrl: 'https://speed.cloudflare.com/__up',
+        priority: 10
+      },
+      {
+        name: '阿里云 (上海)',
+        region: 'CN',
+        pingUrl: 'https://oss-cn-shanghai.aliyuncs.com',
+        downloadUrl: 'https://speed.cloudflare.com/__down?bytes=',
+        uploadUrl: 'https://speed.cloudflare.com/__up',
+        priority: 10
+      },
+      {
+        name: '腾讯云 (北京)',
+        region: 'CN',
+        pingUrl: 'https://cos.ap-beijing.myqcloud.com',
+        downloadUrl: 'https://speed.cloudflare.com/__down?bytes=',
+        uploadUrl: 'https://speed.cloudflare.com/__up',
+        priority: 10
+      },
+      {
+        name: '百度云 (北京)',
+        region: 'CN',
+        pingUrl: 'https://bj.bcebos.com',
+        downloadUrl: 'https://speed.cloudflare.com/__down?bytes=',
+        uploadUrl: 'https://speed.cloudflare.com/__up',
+        priority: 10
+      },
+      // 国际服务器
+      {
+        name: 'Cloudflare (全球)',
+        region: 'US',
         pingUrl: 'https://1.1.1.1',
         downloadUrl: 'https://speed.cloudflare.com/__down?bytes=',
-        uploadUrl: 'https://speed.cloudflare.com/__up'
+        uploadUrl: 'https://speed.cloudflare.com/__up',
+        priority: 5
       },
       {
         name: 'Google',
+        region: 'US',
         pingUrl: 'https://www.google.com',
         downloadUrl: 'https://speed.cloudflare.com/__down?bytes=',
-        uploadUrl: 'https://speed.cloudflare.com/__up'
+        uploadUrl: 'https://speed.cloudflare.com/__up',
+        priority: 5
       }
     ];
 
     let currentServer = null;
     let testStartTime = null;
+    let userCountryCode = null;
+    let speedUnit = 'Mbps';
+    let rawDownloadMbps = null; // 原始下载速度（Mbps）
+    let rawUploadMbps = null; // 原始上传速度（Mbps）
+
+    // 单位转换函数：将 Mbps 转换为指定单位
+    function convertSpeed(mbps, unit) {
+      if (mbps === null || mbps === undefined || isNaN(mbps) || mbps === '--' || mbps === '错误') {
+        return '--';
+      }
+
+      const value = parseFloat(mbps);
+      if (isNaN(value)) return '--';
+
+      switch (unit) {
+        case 'Mbps':
+          return value.toFixed(2);
+        case 'MB/s':
+          return (value / 8).toFixed(2);
+        case 'Kbps':
+          return (value * 1000).toFixed(2);
+        case 'KB/s':
+          return (value * 1000 / 8).toFixed(2);
+        case 'Gbps':
+          return (value / 1000).toFixed(3);
+        default:
+          return value.toFixed(2);
+      }
+    }
+
+    // 更新速度显示
+    function updateSpeedDisplay() {
+      const downloadUnitEl = document.getElementById('downloadUnit');
+      const uploadUnitEl = document.getElementById('uploadUnit');
+      const summaryDownloadUnitEl = document.getElementById('summaryDownloadUnit');
+      const summaryUploadUnitEl = document.getElementById('summaryUploadUnit');
+
+      if (downloadUnitEl) downloadUnitEl.textContent = speedUnit;
+      if (uploadUnitEl) uploadUnitEl.textContent = speedUnit;
+      if (summaryDownloadUnitEl) summaryDownloadUnitEl.textContent = speedUnit;
+      if (summaryUploadUnitEl) summaryUploadUnitEl.textContent = speedUnit;
+
+      // 更新显示的值
+      if (rawDownloadMbps !== null) {
+        const downloadValueEl = document.getElementById('downloadValue');
+        if (downloadValueEl) {
+          downloadValueEl.textContent = convertSpeed(rawDownloadMbps, speedUnit);
+        }
+      }
+
+      if (rawUploadMbps !== null) {
+        const uploadValueEl = document.getElementById('uploadValue');
+        if (uploadValueEl) {
+          uploadValueEl.textContent = convertSpeed(rawUploadMbps, speedUnit);
+        }
+      }
+
+      // 更新摘要（如果有原始值）
+      const summaryDownloadEl = document.getElementById('summaryDownload');
+      const summaryUploadEl = document.getElementById('summaryUpload');
+      if (summaryDownloadEl && rawDownloadMbps !== null) {
+        const downloadUnitEl = document.getElementById('summaryDownloadUnit');
+        summaryDownloadEl.textContent = convertSpeed(rawDownloadMbps, speedUnit);
+        if (downloadUnitEl) downloadUnitEl.textContent = speedUnit;
+      }
+      if (summaryUploadEl && rawUploadMbps !== null) {
+        const uploadUnitEl = document.getElementById('summaryUploadUnit');
+        summaryUploadEl.textContent = convertSpeed(rawUploadMbps, speedUnit);
+        if (uploadUnitEl) uploadUnitEl.textContent = speedUnit;
+      }
+    }
+
+    // 获取用户IP和地理位置
+    async function getUserLocation() {
+      try {
+        const response = await fetch('https://ipinfo.io/json', {
+          cache: 'no-store'
+        });
+        if (!response.ok) {
+          throw new Error('无法获取IP信息');
+        }
+        const data = await response.json();
+        userCountryCode = data.country || null;
+        return userCountryCode;
+      } catch (error) {
+        console.log('获取用户位置失败:', error);
+        // 尝试备用API
+        try {
+          const response = await fetch('https://ipwhois.app/json/', {
+            cache: 'no-store'
+          });
+          if (response.ok) {
+            const data = await response.json();
+            if (data.success) {
+              userCountryCode = data.country_code || null;
+              return userCountryCode;
+            }
+          }
+        } catch (fallbackError) {
+          console.log('备用API也失败:', fallbackError);
+        }
+        return null;
+      }
+    }
 
     // 选择最佳服务器（通过ping测试）
     async function selectBestServer() {
       const serverInfo = document.getElementById('serverInfo');
+      serverInfo.textContent = '正在检测用户位置...';
+
+      // 获取用户地理位置
+      await getUserLocation();
+
       serverInfo.textContent = '正在选择最佳测试服务器...';
 
-      let bestServer = testServers[0];
-      let bestPing = Infinity;
+      // 根据用户位置筛选服务器
+      let candidateServers = testServers;
 
-      for (const server of testServers) {
+      // 如果用户在中国大陆，优先选择中国大陆服务器
+      if (userCountryCode === 'CN') {
+        const cnServers = testServers.filter(s => s.region === 'CN');
+        if (cnServers.length > 0) {
+          candidateServers = cnServers;
+          serverInfo.textContent = '检测到中国大陆IP，优先选择国内服务器...';
+        }
+      }
+
+      let bestServer = candidateServers[0];
+      let bestPing = Infinity;
+      let testedCount = 0;
+
+      // 测试所有候选服务器的延迟
+      for (const server of candidateServers) {
         try {
           const startTime = performance.now();
-          // 使用 fetch 测试连接时间
           const controller = new AbortController();
-          const timeoutId = setTimeout(() => controller.abort(), 5000);
+          const timeoutId = setTimeout(() => controller.abort(), 3000); // 缩短超时时间以加快选择
 
           try {
             await fetch(server.pingUrl, {
@@ -400,6 +640,7 @@
               bestPing = ping;
               bestServer = server;
             }
+            testedCount++;
           } catch (fetchError) {
             clearTimeout(timeoutId);
             if (fetchError.name !== 'AbortError') {
@@ -411,8 +652,16 @@
         }
       }
 
+      // 如果所有服务器都测试失败，使用第一个作为默认
+      if (testedCount === 0) {
+        bestServer = candidateServers[0];
+        serverInfo.textContent = `已选择测试服务器: ${bestServer.name} (默认)`;
+      } else {
+        const regionInfo = userCountryCode === 'CN' ? ' (中国大陆)' : '';
+        serverInfo.textContent = `已选择测试服务器: ${bestServer.name}${regionInfo} (延迟: ${Math.round(bestPing)}ms)`;
+      }
+
       currentServer = bestServer;
-      serverInfo.textContent = `已选择测试服务器: ${bestServer.name}`;
       return bestServer;
     }
 
@@ -530,7 +779,8 @@
 
         // 计算速度 (Mbps)
         const speedMbps = (totalBytes * 8) / (totalTime * 1000000); // 转换为 Mbps
-        downloadValue.textContent = speedMbps.toFixed(2);
+        rawDownloadMbps = speedMbps;
+        downloadValue.textContent = convertSpeed(speedMbps, speedUnit);
         downloadStatus.textContent = '测试完成';
         downloadCard.classList.remove('testing');
         downloadProgress.classList.remove('active');
@@ -600,9 +850,10 @@
             // 如果上传测试失败，使用模拟数据（基于下载速度的估算）
             if (i === 0) {
               // 假设上传速度约为下载速度的 1/10（常见情况）
-              const downloadSpeed = parseFloat(document.getElementById('downloadValue').textContent) || 10;
+              const downloadSpeed = rawDownloadMbps || 10;
               const estimatedUpload = downloadSpeed * 0.1;
-              uploadValue.textContent = estimatedUpload.toFixed(2);
+              rawUploadMbps = estimatedUpload;
+              uploadValue.textContent = convertSpeed(estimatedUpload, speedUnit);
               uploadStatus.textContent = '估算值（上传测试受限）';
               uploadCard.classList.remove('testing');
               uploadProgress.classList.remove('active');
@@ -619,7 +870,8 @@
 
         // 计算速度 (Mbps)
         const speedMbps = (totalBytes * 8) / (totalTime * 1000000); // 转换为 Mbps
-        uploadValue.textContent = speedMbps.toFixed(2);
+        rawUploadMbps = speedMbps;
+        uploadValue.textContent = convertSpeed(speedMbps, speedUnit);
         uploadStatus.textContent = '测试完成';
         uploadCard.classList.remove('testing');
         uploadProgress.classList.remove('active');
@@ -629,9 +881,10 @@
       } catch (error) {
         // 如果上传测试完全失败，提供估算值
         try {
-          const downloadSpeed = parseFloat(document.getElementById('downloadValue').textContent) || 10;
+          const downloadSpeed = rawDownloadMbps || 10;
           const estimatedUpload = downloadSpeed * 0.1;
-          uploadValue.textContent = estimatedUpload.toFixed(2);
+          rawUploadMbps = estimatedUpload;
+          uploadValue.textContent = convertSpeed(estimatedUpload, speedUnit);
           uploadStatus.textContent = '估算值（上传测试受限）';
           uploadCard.classList.remove('testing');
           uploadProgress.classList.remove('active');
@@ -660,6 +913,8 @@
       document.getElementById('pingValue').textContent = '--';
       document.getElementById('downloadValue').textContent = '--';
       document.getElementById('uploadValue').textContent = '--';
+      rawDownloadMbps = null;
+      rawUploadMbps = null;
       document.getElementById('pingStatus').textContent = '等待测试';
       document.getElementById('downloadStatus').textContent = '等待测试';
       document.getElementById('uploadStatus').textContent = '等待测试';
@@ -685,8 +940,19 @@
         const testDuration = Math.round((testEndTime - testStartTime) / 1000);
 
         document.getElementById('summaryPing').textContent = `${Math.round(ping)} ms`;
-        document.getElementById('summaryDownload').textContent = `${download.toFixed(2)} Mbps`;
-        document.getElementById('summaryUpload').textContent = `${upload.toFixed(2)} Mbps`;
+        const summaryDownloadEl = document.getElementById('summaryDownload');
+        const summaryUploadEl = document.getElementById('summaryUpload');
+        const summaryDownloadUnitEl = document.getElementById('summaryDownloadUnit');
+        const summaryUploadUnitEl = document.getElementById('summaryUploadUnit');
+        
+        if (summaryDownloadEl && summaryDownloadUnitEl) {
+          summaryDownloadEl.textContent = convertSpeed(download, speedUnit);
+          summaryDownloadUnitEl.textContent = speedUnit;
+        }
+        if (summaryUploadEl && summaryUploadUnitEl) {
+          summaryUploadEl.textContent = convertSpeed(upload, speedUnit);
+          summaryUploadUnitEl.textContent = speedUnit;
+        }
         document.getElementById('summaryTime').textContent = `${testDuration} 秒`;
         summarySection.classList.add('show');
       } catch (error) {
@@ -706,6 +972,15 @@
 
       // 绑定开始测试按钮
       document.getElementById('startTestBtn').addEventListener('click', runSpeedTest);
+
+      // 绑定单位切换
+      const unitSelect = document.getElementById('unitSelect');
+      if (unitSelect) {
+        unitSelect.addEventListener('change', (e) => {
+          speedUnit = e.target.value;
+          updateSpeedDisplay();
+        });
+      }
     });
   </script>
 </body>
